--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Converts an HTTP Server into an Express server",
   "main": "app.js",
+  "type":"module",
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js"
